--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-page1/ressources/video-barbier.mp4
-page1/ressources/video-creyda-short.mp4
-page1/ressources/video-gradient.mp4
+accueil/ressources
+projet-creyda/ressources
+projet-barber/ressources
