--- a/package.json
+++ b/package.json
@@ -14,18 +14,25 @@
     "core-js": "^3.8.3",
     "intl-tel-input": "^22.0.2",
     "parallax-js": "^3.1.0",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primevue": "^3.53.1",
     "vue": "^3.4.27",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@tailwindcss/postcss": "^4.1.17",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17"
   },
   "author": "Isaure",
   "license": "ISC"
