--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-vue": "^8.0.3",
     "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "tailwindcss": "^4.1.17"
   },
   "author": "Isaure",
