--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "firebase": "^12.6.0",
     "intl-tel-input": "^22.0.2",
     "parallax-js": "^3.1.0",
     "primeflex": "^4.0.0",
